--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,9 @@ android {
         }
     }
 }
-
+dependencies {
+    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
+}
 dependencies {
     def core_version = "1.7.0"
     def appcompat_version = "1.4.1"
