--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,9 +59,12 @@ dependencies {
     def nav_version = "2.4.1"
     def room_version = "2.4.2"
     def firebase_version = "29.3.0"
-    def okhttp_version = "4.9.3"
     def play_services_base_version = "18.0.1"
     def glide_version ="4.11.0"
+    def retrofit_version ="2.9.0"
+    def retrofitgson_version ="2.5.0"
+    def logging_version = "4.10.0"
+
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -75,14 +78,15 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     implementation "com.google.android.material:material:$mdc_version"
-    implementation "com.google.code.gson:gson:$gson_version"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation platform("com.google.firebase:firebase-bom:$firebase_version")
     implementation "com.google.firebase:firebase-messaging-ktx"
-    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitgson_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$logging_version"
     implementation "com.google.android.gms:play-services-base:$play_services_base_version"
     implementation "com.github.bumptech.glide:glide:$glide_version"
     testImplementation "junit:junit:$junit_version"
