--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.dagger.hilt.android'
 
 android {
     compileSdkVersion 31
@@ -41,32 +42,33 @@ android {
             buildConfigField "String", "BASE_URL", '"http://10.0.2.2:9999"'
         }
     }
+    namespace 'ru.netology.nmedia'
 }
 
 dependencies {
-    def core_version = "1.7.0"
-    def appcompat_version = "1.4.1"
-    def constraintlayout_version = "2.1.3"
+    def core_version = "1.9.0"
+    def appcompat_version = "1.5.1"
+    def constraintlayout_version = "2.1.4"
     def swiperefreshlayout_version = "1.1.0"
     def coordinatorlayout_version = "1.2.0"
     def recyclerview_version = "1.2.1"
     def junit_version = "4.13.2"
     def ext_junit_version = "1.1.3"
     def espresso_core_version = "3.4.0"
-    def activity_version = "1.4.0"
-    def lifecycle_version = "2.4.1"
-    def mdc_version = "1.5.0"
-    def nav_version = "2.4.1"
+    def activity_version = "1.6.0"
+    def lifecycle_version = "2.5.1"
+    def mdc_version = "1.6.1"
+    def nav_version = "2.5.2"
     def room_version = "2.4.3"
-    def firebase_version = "29.3.0"
-    def glide_version = "4.13.1"
+    def firebase_version = "30.3.1"
+    def glide_version = "4.15.1"
     def retrofit_version = "2.9.0"
     def retrofitgson_version = "2.9.0"
-    def okhttplogging_version = "4.9.3"
-    def coroutines_version = "1.6.0"
+    def okhttplogging_version = "4.10.0"
+    def coroutines_version = "1.6.4"
     def imagepicker_version = "2.1"
     def fragment_version = "1.4.1"
-    def play_services_base_version = "18.0.1"
+    def play_services_base_version = "18.1.0"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "androidx.core:core-ktx:$core_version"
@@ -94,8 +96,21 @@ dependencies {
     implementation "com.github.dhaval2404:imagepicker:$imagepicker_version"
     implementation "com.google.android.gms:play-services-base:$play_services_base_version"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    implementation 'com.google.dagger:hilt-android:2.45'
+    kapt 'com.google.dagger:hilt-compiler:2.45'
+
+    androidTestImplementation 'com.goole.dagger:hilt-android-testing:2.45'
+    kaptAndroidTest 'com.google.dagger:hilt=compiler:2.45'
+
+
+    testImplementation 'com.google.dagger:hilt-android-testing:2.45'
+    kaptTest 'com.google.dagger:hilt-compiler:2.45'
+
 
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_core_version"
+}
+kapt{
+    correctErrorTypes true
 }
